# perappproxy

./: .gitignore  README.md  build_cli.bat  build_gui.bat  pyproject.toml  run_gui.py  standalone_gui.py
src/perappproxy/: __init__.py  __main__.py  cli.py  config.py  gui.py  proxy_pool.py  proxy_server.py  route_resolver.py  scanner.py  system_proxy.py  win_api.py
tests/: test_config.py
